# libmaus2

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  bumpversion.sh  config.h.in  configure  configure.ac  configure.in  libmaus.pc.in  libmaus2.pc.in  libmaus2digests.pc.in  libmaus2fftw.pc.in  libmaus2irods.pc.in  libmaus2lsf.pc.in  libmaus2seqchksumsfactory.pc.in  libmausdigests.pc.in  libmausirods.pc.in  libmauslsf.pc.in  libmausseqchksumsfactory.pc.in  merge.sh  release.sh  ubuntu.sh.in
src/: Makefile.am  Makefile.in
src/libmaus/: LibMausConfig.hpp.in  StaticInitialization.cpp
src/libmaus/aio/: AsynchronousBufferReader.hpp  AsynchronousFastReaderBase.hpp  AsynchronousReader.hpp  AsynchronousWriter.hpp  BlockSynchronousOutputBuffer8.hpp  BufferedOutput.hpp  CheckedInputOutputStream.hpp  CheckedInputStream.hpp  CheckedInputStreamAtOffset.hpp  CheckedOutputStream.hpp  CircularBuffer.hpp  CircularWrapper.hpp  CompactDecoder4.hpp  CompactEncoder4.hpp  FileFragment.hpp  GenericInput.hpp  GenericOutput.hpp  GetLength.hpp  IStreamWrapper.hpp  InputStream.hpp  InputStreamFactory.hpp  InputStreamFactoryContainer.hpp  InputStreamWrapper.hpp  LimitedGenericInput.hpp  LimitedSynchronousGenericInput.hpp  LineSplittingPosixFdOutputStreamBuffer.hpp  LinuxStreamingPosixFdOutputStream.hpp  LinuxStreamingPosixFdOutputStreamBuffer.hpp  MemInBuffer.hpp  MemOutBuffer.hpp  MetaOutputBuffer8.hpp  MetaOutputFile8Array.hpp  MultiFileConcatWriter.hpp  NamedTemporaryFile.hpp  NamedTemporaryFileTypeInfo.hpp  OutputBuffer.hpp  OutputBuffer8.hpp  OutputBuffer84Bit.hpp  OutputFile8Array.hpp  PosixFdInput.hpp  (+18 more)
src/libmaus/alignment/: BamLineInfo.hpp  FactorMatchInfo.hpp  KmerInfo.hpp  KmerTuple.hpp
src/libmaus/arithmetic/: ArithCoder.hpp  ArithDecoder.hpp  ArithEncoder.hpp  RangeCoder.hpp  RangeDecoder.hpp  RangeEncoder.hpp
src/libmaus/autoarray/: AutoArray.cpp  AutoArray.hpp  AutoArray2d.hpp
src/libmaus/bambam/: AdapterFilter.hpp  AlignmentBufferHeapComparator.hpp  AlignmentValidity.cpp  AlignmentValidity.hpp  BamAlignment.cpp  BamAlignment.hpp  BamAlignmentComparator.hpp  BamAlignmentDecoder.hpp  BamAlignmentDecoderBase.hpp  BamAlignmentDecoderFactory.hpp  BamAlignmentDecoderInfo.cpp  BamAlignmentDecoderInfo.hpp  BamAlignmentEncoderBase.hpp  BamAlignmentExpungeCallback.hpp  BamAlignmentFilter.hpp  BamAlignmentFixedSizeData.hpp  BamAlignmentHeapComparator.hpp  BamAlignmentInputCallbackBam.hpp  BamAlignmentInputCallbackSnappy.hpp  BamAlignmentListNode.hpp  BamAlignmentNameComparator.cpp  BamAlignmentNameComparator.hpp  BamAlignmentPosComparator.hpp  BamAlignmentPrinter.hpp  BamAlignmentReadGroupFilter.hpp  BamAlignmentSnappyInput.hpp  BamAlignmentSortingCircularHashEntryOverflow.hpp  BamAuxFilterVector.hpp  BamAuxSortingBuffer.hpp  BamBlockWriterBase.hpp  BamBlockWriterBaseFactory.hpp  BamCat.hpp  BamCatHeader.hpp  BamDecoder.hpp  BamEntryContainer.hpp  BamFlagBase.cpp  BamFlagBase.hpp  BamFormatAuxiliary.hpp  BamHeader.cpp  BamHeader.hpp  (+159 more)
src/libmaus/bitbtree/: bitbtree.hpp
src/libmaus/bitio/: ArrayDecode.hpp  BitIO.hpp  BitIOInput.hpp  BitIOOutput.hpp  BitStreamFileDecoder.hpp  BitVector.hpp  BitVectorConcat.hpp  BitVectorInput.hpp  BitVectorOutput.hpp  BitWriter.hpp  BufferIterator.hpp  CheckedBitWriter.hpp  Clz.hpp  CompactArray.cpp  CompactArray.hpp  CompactArrayBase.hpp  CompactArrayWriter.hpp  CompactArrayWriterFile.hpp  CompactDecoderBuffer.hpp  CompactOffsetArray.hpp  CompactOffsetOneArray.hpp  CompactQueue.hpp  CompactSparseArray.hpp  Ctz.hpp  FastWriteBitWriter.hpp  MarkerFastWriteBitWriter.hpp  OutputBuffer.hpp  PacDecoderBuffer.hpp  ReverseTable.hpp  SignedCompactArray.hpp  SwapWordBitBlock.hpp  getBit.hpp  getBits.hpp  putBit.hpp  putBits.hpp  readElias.hpp  swapBitBlocksByReversal.hpp
src/libmaus/bp/: BalancedParentheses.hpp  BalancedParenthesesBase.hpp
src/libmaus/btree/: btree.hpp
src/libmaus/clustering/: HashCreation.hpp  HashCreationBase.hpp  KmerBase.hpp  ProduceEdgeRequest.hpp
src/libmaus/consensus/: Consensus.cpp  Consensus.hpp  ConsensusBase.cpp  ScoringMatrix.cpp  ScoringMatrix.hpp
src/libmaus/cumfreq/: DynamicCumulativeFrequencies.hpp  SlowCumFreq.hpp
src/libmaus/deleter/: Deleter.hpp
src/libmaus/digest/: CRC32.cpp  CRC32.hpp  CRC32C.cpp  CRC32C.hpp  CRC32C_Core.cpp  CRC32C_Core.hpp  CRC32C_sse42.cpp  CRC32C_sse42.hpp  CRC32C_sse42_update.cpp  CRC32_Core.cpp  CRC32_Core.hpp  DigestBase.hpp  DigestFactory.hpp  DigestFactoryContainer.hpp  DigestFactoryInterface.hpp  DigestFactory_CRC32C_SSE42.cpp  DigestFactory_SHA2_ASM.cpp  DigestInterface.hpp  Digests.hpp  Null.hpp  SHA1.cpp  SHA1.hpp  SHA2_224.cpp  SHA2_224.hpp  SHA2_256.cpp  SHA2_256.hpp  SHA2_256_sse4.cpp  SHA2_256_sse4.hpp  SHA2_384.cpp  SHA2_384.hpp  SHA2_512.cpp  SHA2_512.hpp  SHA2_512_sse4.cpp  SHA2_512_sse4.hpp  sha256.h
src/libmaus/eta/: LinearETA.hpp
src/libmaus/exception/: LibMausException.hpp
src/libmaus/fastx/: CharBuffer.hpp  CharTermTable.hpp  CompactFastDecoder.hpp  FASTQEntry.hpp  (+69 more)
src/libmaus2/: LibMausConfig.hpp.in  StaticInitialization.cpp
src/test/: testAIO.cpp  testArithmetic.cpp  testBWTDyn.cpp  testBWTHufDyn.cpp  testBitIO.cpp  testConsensus.cpp  testConstantSumCombinatorics.cpp  testDNABitWords.cpp  testDivSufSort.cpp  testFastRead.cpp  testFork.cpp  testHuffman.cpp  testIsa.cpp  testOS.cpp  testRank.cpp  testToWaveletTreeBits.cpp  testTrie.cpp  testWaveletExternal.cpp  testalignerspeed.cpp  testargparser.cpp  testarraydecode.cpp  testarrayinput.cpp  testautoarray2d.cpp  testavx.cpp  testbamcat.cpp  testbamcmp.cpp  testbamdamage.cpp  testbamdif.cpp  testbamgetrefreg.cpp  testbamheaderparser.cpp  testbamindex.cpp  testbammateerase.cpp  testbammerge.cpp  testbammergecollate.cpp  testbammergecoordinate.cpp  testbammergequeryname.cpp  testbamnumericalindex.cpp  testbamrange.cpp  testbamrewrite.cpp  testbamtofastq.cpp  (+132 more)
test/: Makefile.am  Makefile.in  configure.gz.sh  testAIO.sh  testBitIO.sh  testRank.sh  testargparser.sh  testarraydecode.sh  testarrayinput.sh  testautoarray2d.sh  testbitbtree.sh  testdnarank.sh  testintervaltree.sh
(+2776 files in other folders)
