TESTS=testAIO.sh testargparser.sh testarraydecode.sh testarrayinput.sh testautoarray2d.sh testbitbtree.sh
TEST_ENVIRONMENT= 
LOG_COMPILER=/bin/bash
EXTRA_DIST=testAIO.sh configure.gz.sh base64decode.sh testargparser.sh testarraydecode.sh testarrayinput.sh testautoarray2d.sh testbitbtree.sh

#check_PROGRAMS= # bamcmp bamtosam

#bamcmp_SOURCES = bamcmp.cpp
#bamcmp_LDADD = ${LIBMAUS2LIBS}
#bamcmp_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
#bamcmp_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}

#bamtosam_SOURCES = bamtosam.cpp
#bamtosam_LDADD = ${LIBMAUS2LIBS}
#bamtosam_LDFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS} ${LIBMAUS2LDFLAGS} ${AM_LDFLAGS}
#bamtosam_CPPFLAGS = ${AM_CPPFLAGS} ${LIBMAUS2CPPFLAGS}
